Add customer model and api to backend
